--- a/ch9/9.40.md
+++ b/ch9/9.40.md
@@ -2,6 +2,6 @@ If the program reads 256 words, the `capacity` is 1024.
 
 If the program reads 512 words, the `capacity` is 1024.
 
-If the program reads 1000 words, the `capacity` is 1024.
+If the program reads 1000 words, the `capacity` is *at least* 1000+1000/2=1500.
 
-If the program reads 1048 words, the `capacity` is *at least* 1048.
+If the program reads 1048 words, the `capacity` is *at least* 1048+1048/2=1572.
